:lipstick: fix tictactoe font size and alignment

--- a/src/Components/Portfolio/SundayMorning/Programs/TicTacToe/Cell/Cell.module.css
+++ b/src/Components/Portfolio/SundayMorning/Programs/TicTacToe/Cell/Cell.module.css
@@ -2,7 +2,8 @@
     background: #fff;
     height:100px;
     width: 6rem;
-    font-size:2rem;
+    font-size: 4rem;
+    text-align: center;
     border-radius: 0px;
     border: 1px solid black;
 }
